fixup! fixup! RM#74613 Add a new CLI task to check xml attributes validity (#95)